tidy portal page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-name: agilejzl's Blog
 pygments: false
 markdown: rdiscount
+username: AgileJzl
+useremail: agilejzl@gmail.com
+blogtitle: AgileJzl's Blog
