--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,8 @@ markdown: rdiscount
 username: AgileJzl
 useremail: agilejzl@gmail.com
 blogtitle: AgileJzl's Blog
+aboutsite: https://github.com/agilejzl
+blogmotto: 做自己喜欢的事
+
 assets_js: /assets/js
 assets_css: /assets/css
