--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 pygments: false
 markdown: rdiscount
-username: AgileJzl
+username: Teddy
 useremail: agilejzl@gmail.com
-blogtitle: AgileJzl's Blog
+blogtitle: Teddy's Blog
 aboutsite: https://github.com/agilejzl
 blogmotto: 做自己喜欢的事
 
