add folder for posts

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ username: Teddy
 useremail: agilejzl@gmail.com
 blogtitle: Teddy's Blog
 aboutsite: https://github.com/agilejzl
-blogmotto: 做自己喜欢的事
+blogmotto: 追求优美的风格
 
 assets_js: /assets/js
 assets_css: /assets/css
